# DAU-MAU_counter

./: AGENTS.md  README.md
dp-dau-mau/: .gitattributes  .gitignore  .pre-commit-config.yaml  HANDOFF.md  Makefile  NEXT_STEPS.md  Placeholders.md  README.md  commands.txt  grade.md  progress.txt  pyproject.toml  requirements.txt
dp-dau-mau/.github/workflows/: ci.yml
dp-dau-mau/.hypothesis/constants/: 12aa3e52b5928ac4  1937ac04a157f609  27e7208c7a4e202d  2e2268a011f28012  3d80ba2ea0b315dd  4b7996cc60f5ccca  62928820e64ce027  6547a97ee698300f  675569b311d9cb3a  7e626941a9523a3b  8316f64cdac9d227  8380dfc2d41433e4  8b201945d9e4fab5  9148d86400f419bb  99c716ef9f422d53  9bfc1ec1980c114f  9e944a899890e85e  9ea0a0d0d5aaf9dd  a81756b259623856  bf7ceec5fb7d5696  c8766a8aa3417bbc  cac1c65343224335  d305abddcd0ad2e5  d466d347c324400f  d8d36a560f5a9e73  d9c6d74d038508fb  da5914d22235aeb9  dfc0ac980795d17a  e19b9ebffdfa5680  ee648223fbc248f6  f4fdba48530a2bf3  f93f627ee957ec68  fc8e232848893762  ff3eeb2a1f89d12f
dp-dau-mau/cli/: dpdau.py
dp-dau-mau/data_eval_grid/experiments/: grid.json
dp-dau-mau/data_eval_grid2/experiments/: grid.json
dp-dau-mau/docker/: Dockerfile  docker-compose.yml
dp-dau-mau/docs/: runbook.md  tutorial.md
dp-dau-mau/eval/: adversarial.py  evaluate.py  plots.py  simulate.py
dp-dau-mau/eval/notebooks/: evaluation.ipynb
dp-dau-mau/load/: locustfile.py
dp-dau-mau/scripts/: smoke.sh
dp-dau-mau/src/dp_core/: __init__.py  config.py  dp_mechanisms.py  hashing.py  ledger.py  pipeline.py  privacy_accountant.py  windows.py
dp-dau-mau/src/dp_core/sketches/: __init__.py  base.py  hllpp_impl.py  kmv_impl.py  set_impl.py  theta_impl.py
dp-dau-mau/src/service/: __init__.py  api_schemas.py  app.py  auth.py  metrics.py  openapi_overrides.py  rate_limit.py  routes.py
dp-dau-mau/tests/: conftest.py  test_accountant.py  test_cli.py  test_correctness_fixes.py  test_dp_mechanisms.py  test_e2e_api.py  test_e2e_service.py  test_metrics.py  test_pipeline.py  test_property_turnstile.py  test_service.py  test_sketches.py
dp-dau-mau/tools/: check_placeholders.py  ci_config_guard.py  export_budget_report.py  precommit_guard.py
paper/: README.md  info.md  paper.aux  paper.fdb_latexmk  paper.fls  paper.out  paper.tex  placeholders.md
tex/: abstract.fdb_latexmk  abstract.fls  abstract.tex  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
